Allow configuration of topic names and QoS levels
While the MQTT topic names and QoS levels are given in the VDA5050
specification, users may still want to be able to deviate from these for
their own use cases.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>